# CSCI5570-Project

./: .gitignore  README.md  fora_mpi.sh  fora_mpi_opt.sh  graphx.sh  knightking.sh
cluster_monitor/: collectl.py  pcollect.py  plot.py  plot_test.sh  workers
fora/: CMakeLists.txt  algo.h  build.h  config.h  fora_mpi.cpp  query.h
fora/data/dblp/: ssquery.txt
fora/data/webstanford/: ssquery.txt
fora/data/youtube/: attribute.txt
graphx/: README.md  build.sbt
graphx/src/main/scala/: PPR.scala
pontux/: CMakeLists.txt
pontux/app/: CMakeLists.txt
results/: plot.py
selfappr/: CMakeLists.txt  machines.cfg
